--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/server/main.go",
   "scripts": {
     "start": "tsc && go run src/server/main.go",
+    "start-go": "go run main.go", 
+    "start-react": "react-scripts start",
     "build": "tsc",
     "test": "echo \"No tests specified\" && exit 0"
   },
