--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "main": "src/server/main.go",
   "scripts": {
     "start": "tsc && go run src/server/main.go",
-    "start-go": "go run main.go", 
+    "start-go": "go run main.go",
     "start-react": "react-scripts start",
     "build": "tsc",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
+    "axios": "^1.12.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
-    "axios": "^0.21.1",
-    "chart.js": "^2.9.4",
-    "react-chartjs-2": "^2.11.1"
+    "recharts": "^3.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^4.1.2",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "@types/react-dom": "^17.0.0",
+    "typescript": "^4.1.2"
   },
   "repository": {
     "type": "git",
