--- a/src/heartbeat-visualizer/public/mocking_data/ebpf-leases.json
+++ b/src/heartbeat-visualizer/public/mocking_data/ebpf-leases.json
@@ -11,17 +11,17 @@
   { "timestamp": 1757365600000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
   { "timestamp": 1757365650000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
   { "timestamp": 1757365700000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757365750000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757365800000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757365850000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757365900000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757365950000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757366000000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757366050000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757366100000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757366150000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757366200000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
-  { "timestamp": 1757366250000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
+  { "timestamp": 1757365750000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757365800000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757365850000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757365900000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757365950000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757366000000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757366050000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757366100000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757366150000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757366200000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
+  { "timestamp": 1757366250000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "exit" },
 
 
   { "timestamp": 1757366383770, "namespace": "dapr-system", "pod": "dapr-system-def456", "pid": 2001, "comm": "sidecar", "syscall": "sched_switch" },
@@ -68,7 +68,6 @@
   { "timestamp": 1757368500000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "sched_switch" },
   { "timestamp": 1757368550000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "sched_switch" },
   { "timestamp": 1757368600000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "sched_switch" },
-  { "timestamp": 1757368650000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "sched_switch" },
 
   { "timestamp": 1757368800000, "namespace": "kube-node-lease", "pod": "kube-node-lease-jkl012", "pid": 4001, "comm": "node-agent", "syscall": "sched_switch" },
   { "timestamp": 1757368850000, "namespace": "kube-node-lease", "pod": "kube-node-lease-jkl012", "pid": 4001, "comm": "node-agent", "syscall": "sched_switch" },
