--- a/src/heartbeat-visualizer/public/mocking_data/ebpf-leases.manifest.json
+++ b/src/heartbeat-visualizer/public/mocking_data/ebpf-leases.manifest.json
@@ -1,4 +1,9 @@
 [
   "ebpf-leases.json",
-  "ebpf-leases20250911T173300.json"
+  "ebpf-leases20250911T173300.json",
+  "ebpf-leases20250911T173326.json",
+  "ebpf-leases20250911T173329.json",
+  "ebpf-leases20250911T173332.json",
+  "ebpf-leases20250911T173333.json",
+  "ebpf-leases20250911T173334.json"
 ]
