--- a/src/heartbeat-visualizer/public/mocking_data/ebpf-leases20250911T173300.json
+++ b/src/heartbeat-visualizer/public/mocking_data/ebpf-leases20250911T173300.json
@@ -22,7 +22,6 @@
   { "timestamp": 1757366460000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
   { "timestamp": 1757366470000, "namespace": "aws-pca-issuer", "pod": "aws-pca-issuer-abc123", "pid": 1001, "comm": "kubelet", "syscall": "sched_switch" },
 
-  // dapr-system
   { "timestamp": 1757367443770, "namespace": "dapr-system", "pod": "dapr-system-def456", "pid": 2001, "comm": "sidecar", "syscall": "sched_switch" },
   { "timestamp": 1757367453770, "namespace": "dapr-system", "pod": "dapr-system-def456", "pid": 2001, "comm": "sidecar", "syscall": "sched_switch" },
   { "timestamp": 1757367463770, "namespace": "dapr-system", "pod": "dapr-system-def456", "pid": 2001, "comm": "sidecar", "syscall": "sched_switch" },
@@ -46,17 +45,17 @@
   { "timestamp": 1757367643770, "namespace": "dapr-system", "pod": "dapr-system-def456", "pid": 2001, "comm": "sidecar", "syscall": "sched_switch" },
   { "timestamp": 1757367653770, "namespace": "dapr-system", "pod": "dapr-system-def456", "pid": 2001, "comm": "sidecar", "syscall": "sched_switch" },
 
-  { "timestamp": 1757368660000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "sched_switch" },
-  { "timestamp": 1757368670000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "sched_switch" },
-  { "timestamp": 1757368680000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "sched_switch" },
+  { "timestamp": 1757368660000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "oom_kill_process" },
+  { "timestamp": 1757368670000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "oom_kill_process" },
+  { "timestamp": 1757368680000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "oom_kill_process" },
   { "timestamp": 1757368725000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3001, "comm": "controller", "syscall": "exit" },
   { "timestamp": 1757368735000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "fork" },
-  { "timestamp": 1757368745000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "sched_switch" },
-  { "timestamp": 1757368755000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "sched_switch" },
-  { "timestamp": 1757368765000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "sched_switch" },
-  { "timestamp": 1757368775000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "sched_switch" },
-  { "timestamp": 1757368785000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "sched_switch" },
-  { "timestamp": 1757368795000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "sched_switch" },
+  { "timestamp": 1757368745000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "oom_kill_process" },
+  { "timestamp": 1757368755000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "oom_kill_process" },
+  { "timestamp": 1757368765000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "oom_kill_process" },
+  { "timestamp": 1757368775000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "oom_kill_process" },
+  { "timestamp": 1757368785000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "oom_kill_process" },
+  { "timestamp": 1757368795000, "namespace": "harness-gitops", "pod": "harness-gitops-ghi789", "pid": 3002, "comm": "controller", "syscall": "oom_kill_process" },
 
   { "timestamp": 1757369860000, "namespace": "kube-node-lease", "pod": "kube-node-lease-jkl012", "pid": 4001, "comm": "node-agent", "syscall": "sched_switch" },
   { "timestamp": 1757369870000, "namespace": "kube-node-lease", "pod": "kube-node-lease-jkl012", "pid": 4001, "comm": "node-agent", "syscall": "sched_switch" },
